--- a/styles.css
+++ b/styles.css
@@ -25,19 +25,22 @@ body {
 }
 
 .photo-placeholder {
-    width: 250px;
-    height: 300px;
-    background: #fff;
+    width: 100%;
+    height: 300px; /* o el alto que estés usando */
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .photo-placeholder img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
 }
+
+
+
 
 .btn {
     padding: 15px 40px;
@@ -254,3 +257,9 @@ body {
     color: #7b0323; /* rojo concha de vino */
     font-weight: bold;
 }
+
+.foto2 {
+    object-position: 50% 40%;
+}
+
+
